feat: install RajaOngkir & configure env variables and migrations

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ DB_DATABASE=db_laravel_rajaongkir
 DB_USERNAME=root
 DB_PASSWORD=
 
+# RAJAONGKIR_API_KEY=Check your rajaongkir.com account and enter your API Key.
+# RAJAONGKIR_PACKAGE=Check your rajaongkir.com account and Enter Your Account Type (Starter, Pro)
+# RAJAONGKIR_TIMEOUT=Check your rajaongkir.com account and Enter Your Timeout
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
